# gptcli

./: README.md  pyproject.toml
src/gptcli/: cli.py
